# KubrikAi

./: .gitignore  IMPLEMENTATION.md  README.md  ROUTING_IMPLEMENTATION.md  config.yaml  pyproject.toml  requirements.txt  setup.py  test_cli.py  test_offline.py  timeoutv3.css
config/: routing_config.yaml
examples/: intelligent_routing_demo.py  routing_demo.py
kubrik_ai/: __init__.py
kubrik_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kubrik_ai/api/: __init__.py  rest_api.py
kubrik_ai/cli/: __init__.py  main.py
kubrik_ai/connectors/: __init__.py
kubrik_ai/core/: __init__.py
kubrik_ai/experts/: __init__.py
kubrik_ai/routing/: __init__.py  database_router.py  intelligent_routing.py  metrics_logger.py  schema_embedder.py  security_enforcer.py  sql_validator.py
kubrik_ai/tests/: test_routing.py
kubrikai/: __init__.py
kubrikai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kubrikai/cli/: __init__.py  main.py
kubrikai/connectors/: __init__.py  base.py  postgresql.py
kubrikai/core/: __init__.py  mock_embeddings.py  policy_engine.py  router.py  schema_engine.py  sql_validator.py
tests/: test_routing.py
