[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubrikai"
version = "0.1.0"
description = "The Language Model for Data - Intelligent SQL routing and generation"
authors = [{name = "KubrikAI Team", email = "team@kubrikai.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "sqlglot>=20.0.0",
    "psycopg2-binary>=2.9.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "python-json-logger>=2.0.0",
    "asyncio-throttle>=1.0.0",
    "mysql-connector-python>=8.0.0",
    "pymongo>=4.0.0",
    "snowflake-connector-python>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/ratl-dev/KubrikAi"
Repository = "https://github.com/ratl-dev/KubrikAi"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true